tags no longer wrap

--- a/scss/conduit.scss
+++ b/scss/conduit.scss
@@ -37,6 +37,7 @@ $brand-danger:  #B85C5C !default;
   font-size:0.8rem;
   padding-top:0.1rem;
   padding-bottom:0.1rem;
+  white-space:nowrap;
 
   &:hover {
     text-decoration: none;
